qa/apps/frontend-dev/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clin-frontend-dev
  name: clin-frontend-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clin-frontend-dev
  template:
    metadata:
      labels:
        app: clin-frontend-dev
    spec:
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: index.docker.io/ferlabcrsj/clin-frontend:c230c86d28abf23eb3a0fa3f3f9238b609226398-1641425809 # {"$imagepolicy": "flux-clin-qa:frontend"}
          name: clin-frontend-dev
          resources:
            requests:
              memory: "256Mi"
              cpu: '0.50'
            limits:
              memory: "512Mi"
              cpu: '1.00'
