qa/apps/frontend-dev/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clin-frontend-dev
  name: clin-frontend-dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: clin-frontend-dev
