qa/apps/frontend-dev/ingresses.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-frontend-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - dev.qa.clin.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: dev.qa.clin.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: clin-frontend-dev
            servicePort: 80
        - path: /search
          backend:
            serviceName: clin-ui
            servicePort: 80
        - path: /variant
          backend:
            serviceName: clin-ui
            servicePort: 80
